--- a/zabbix-protocol/pom.xml
+++ b/zabbix-protocol/pom.xml
@@ -7,18 +7,16 @@
 	<parent>
 		<groupId>cn.bromine0x23.zabbix</groupId>
 		<artifactId>zabbix-build</artifactId>
-		<version>3.4.0.0-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>zabbix-protocol</artifactId>
+	<packaging>jar</packaging>
+
+	<name>Zabbix Protocol</name>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
@@ -34,6 +32,11 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
