Zabbix Spring Boot Starter
Signed-off-by: Bromine0x23 <bromine0x23@163.com>

--- a/zabbix-bom/pom.xml
+++ b/zabbix-bom/pom.xml
@@ -38,6 +38,11 @@
 				<artifactId>zabbix-spring-boot-autoconfigure</artifactId>
 				<version>${zabbix.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>cn.bromine0x23.zabbix</groupId>
+				<artifactId>zabbix-spring-boot-starter</artifactId>
+				<version>${zabbix.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
