--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>cn.bromine0x23.zabbix</groupId>
 	<artifactId>zabbix-build</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Zabbix Build</name>
@@ -71,6 +71,11 @@
 			<dependency>
 				<groupId>cn.bromine0x23.zabbix</groupId>
 				<artifactId>zabbix-spring-boot-autoconfigure</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>cn.bromine0x23.zabbix</groupId>
+				<artifactId>zabbix-spring-boot-starter</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
