--- a/zabbix-bom/pom.xml
+++ b/zabbix-bom/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>cn.bromine0x23.zabbix</groupId>
 		<artifactId>zabbix-build</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -18,7 +18,7 @@
 	<description>Bill of materials (BOM) for Zabbix.</description>
 
 	<properties>
-		<zabbix.version>1.0.0-SNAPSHOT</zabbix.version>
+		<zabbix.version>1.0.0</zabbix.version>
 	</properties>
 
 	<dependencyManagement>
