--- a/zabbix-sender/pom.xml
+++ b/zabbix-sender/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>cn.bromine0x23.zabbix</groupId>
 		<artifactId>zabbix-build</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
