--- a/zabbix-spring-boot-starter/pom.xml
+++ b/zabbix-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>cn.bromine0x23.zabbix</groupId>
 		<artifactId>zabbix-build</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>zabbix-spring-boot-starter</artifactId>
